<resources>
    <string name="app_name">DemoProjectAndroid</string>

    <string name="one_signal_key" translatable="false">fecf6338-8cb2-41ed-a932-e7adebc0578d</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>


    <string name="facebook_app_id">2502720009860742</string>
    <string name="fb_login_protocol_scheme">fb2502720009860742</string>
    <string name="facebook_client_token">983a0d4b2dbd75fa5e47df3ad3cbe81d</string>


    <string name="login_failed">"Login failed"</string>
    <string name="social_login">Social login</string>
    <string name="facebook_login">Facebook login</string>
    <string name="google_login">Google login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="generate_notification">Generate notification</string>
    <string name="change_laguage">Change laguage</string>

    <string name="android_master">Android Master</string>
    <string name="paypal">Paypal</string>
    <string name="stripe">Stripe Pay</string>
    <string name="google">Google Pay</string>
    <string name="paypal_pay">Paypal Pay</string>
    <string name="in_app_purchase">In App Purchase</string>
    <string name="pay">Pay</string>
    <string name="licenseKey">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEA0DT6cpAakMAVKdKl6xnB3eGvIBIydW9CQjyNWq1ObOOSUL8VvMTiWNvrRb6xElQpAO1L/Q/+C96eis7nQJWUxbp57iStnCQDBxlzMbSLbURvKACHC9nScBHhppvlIZgoW8tUnOayiY6en0NHqtdaqArBk4vr8+upLfCVrJ7VULzpQGj6E2UffjUeuZWb5YqGt+iqOzg7g/1W2RPDWC2lvxOO8Shdmj7K4VkEdzcI9FGTOCx5KMOZsW6e/LHTLM4pKejBPiyoaVBqLm/1j6tBo0PPinOdUr7JG7m+grPUAPRg5hpxIz83gfrqSHMG1AME6LQ4vvcUdAaeu4UrMEZvowIDAQAB</string>
    <string name="dynamic_link">Dynamic Link</string>
    <string name="razor_pay">Razor Pay</string>
    <string name="short_link">Short Link</string>
    <string name="long_link">Long Link</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>