<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SocialLogin.SocialLoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/social_login"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook_login"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"/>

    <ImageView
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/facebook" />

    <TextView
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_login"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"/>
    <ImageView
        android:id="@+id/googleSignin"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/google" />

    <TextView
        android:id="@+id/etGoogleEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>